# gotstate

./: .clippy.toml  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  architecture_plan.md  bandit.yaml  cargo-deny.toml  deny.toml  lintit.sh  out.txt  output.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_coverage.sh  rust-toolchain.toml  setup.py  sonar-project.properties
.cursor/rules/: gotstate-rules.mdc
.github/workflows/: ci.yml  coverage.yml  lint.yml  publish.yml  quality.yml  security.yml  sonar.yml  test.yml
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
docs/: api_reference.md  examples.md  module-design.md  pull_request_template.md  usage_guide.md
docs/architecture/file/: component_contracts.md  diagrams.md  error_handling.md  file_architecture.md  interaction_protocols.md  pattern_catalog.md
docs/architecture/package/: cross_cutting_concerns.md  extension_points.md  package_api.md  package_boundaries.md
docs/diagrams/: package_boundaries.md
docs/hfsm_requirements/: 10_references.md  1_introduction.md  2_terms.md  3_functional_requirements.md  4_non_functional_requirements.md  5_constraints.md  6_out_of_scope.md  7_acceptance_criteria.md  8_verification.md  9_glossary.md
docs/model_check_requirements/: model_checking_requirements.md
gotstate/: README.md  __init__.py
gotstate/core/: __init__.py  event.py  machine.py  region.py  state.py  transition.py  types.py
gotstate/core/machine/: basic_state_machine.py  machine_builder.py  machine_modifier.py  machine_monitor.py  machine_status.py  protocol_machine.py  state_machine.py  submachine_machine.py
gotstate/extensions/: __init__.py  hooks.py  sandbox.py
gotstate/persistence/: __init__.py  serializer.py  validator.py
gotstate/runtime/: __init__.py  executor.py  monitor.py  scheduler.py
gotstate/types/: __init__.py  base.py  extensions.py
hsm/core/: actions.py  base.py  data_management.py  errors.py  events.py  guards.py  hooks.py  state_machine.py  states.py  transitions.py  validation.py  validations.py
hsm/core/runtime/: context.py  graph.py
hsm/interfaces/: abc.py  protocols.py  types.py
hsm/plugins/: custom_actions.py  custom_guards.py
hsm/runtime/: async_support.py  concurrency.py  context.py  event_queue.py  executor.py  graph.py  state_history.py  timers.py
hsm/tests/: async_utils.py  conftest.py  test_actions.py  test_async.py  test_async_support.py  test_basic.py  test_concurrency.py  test_data_management.py  test_errors.py  test_event_queue.py  test_events.py  test_executor.py  test_guards.py  test_hierarchy.py  test_hooks.py  test_performance.py  test_placeholder.py  test_protocols.py  test_state_machine.py  test_states.py  test_timers.py  test_transitions.py  test_validation.py  utils.py
hsm/tests/integration/: test_guards_integration.py  test_state_machine_integration.py
hsm/tests/unit/: test_actions.py  test_async_support.py  test_concurrency.py  test_data_management.py  test_errors.py  test_event_queue.py  test_events.py  test_executor.py  test_guards.py  test_hooks.py  test_protocols.py  test_state_machine.py  test_states.py  test_timers.py  test_transitions.py  test_validation.py
notes/: module-design.md  requirements.md
reference/: modular_decomp_of_hfsm.txt
reference/uml/: primitive_types.xmi  standard_profile.xmi  uml.xmi  umldi.xmi
scratch/: module.rs  zip.sh
src/: api.rs  behavior.rs  builder.rs  concurrency.rs  core.rs  diagnostics.rs  fsm_api.rs  lib.rs  model.rs  resource.rs  types.rs  validation.rs  validator.rs
src/api/: fsm_api.rs
src/behavior/: action_executor.rs  guard_evaluator.rs  state_lifecycle_handler.rs  traits.rs
src/builder/: builder_context.rs  fsm_builder.rs  internal_builder.rs
src/concurrency/: event_queue.rs  lock_manager.rs  timeout_scheduler.rs
src/core/: context_provider.rs  dispatcher.rs  engine.rs  executor.rs  lifecycle_controller.rs
src/diagnostics/: diagnostic_collector.rs  error_reporter.rs  logger.rs
src/model/: builder.rs  definition.rs  hierarchy_validator.rs  store.rs
src/models/: context.rs  dispatcher.rs  executor.rs  lifecycle.rs
src/resource/: resource_manager.rs  resource_pool.rs  resource_tracker.rs
src/validation/: rule_engine.rs  runtime_validator.rs  structural_validator.rs  validator.rs
tests/: conftest.py  core_tests.rs  mocks.rs  validator_tests.rs
tests/integration/: test__race_conditions.py  test_async_trace.py  test_complex_hierarchies.py  test_concurrent_trace.py  test_full_scenario.py  test_integration.py  test_nested_trace.py  test_scenarios.py  test_transition_hook.py
tests/unit/: test_actions.py  test_async_support.py  test_async_transitions.py  test_concurrency.py  test_custom_guards.py  test_data_management.py  test_errors.py  test_event.py  test_event_queue.py  test_events.py  test_executor.py  test_guards.py  test_hooks.py  test_machine.py  test_region.py  test_state.py  test_state_machine.py  test_states.py  test_transition.py  test_transitions.py  test_validations.py
tests/unit/core/: test_actions.py  test_async_transitions.py  test_base.py  test_errors.py  (+9 more)
(+19 files in other folders)
