[package]
name = "gotstate-rs"
version = "0.1.0"
edition = "2021"
authors = ["Brad Edwards <brad@keplerops.com>"]
description = "A hierarchical finite state machine library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Brad-Edwards/gotstate-rs"
documentation = "https://docs.rs/gotstate-rs"
readme = "README.md"
keywords = ["fsm", "state-machine", "hierarchical", "async"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
matches = "0.1.1"
mockall = "0.12"
pretty_assertions = "1.4"
proptest = "1.1"
test-case = "3.3"

[dev-dependencies]
mockall = "0.12"
pretty_assertions = "1.4"
proptest = "1.1"
test-case = "3.3"

[features]

[lib]
name = "gotstate"
path = "src/lib.rs"
