# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsm"
version = "0.1.0"
description = "A hierarchical finite state machine library"
authors = [
    {name = "Brad Edwards", email = "brad@keplerops.com"},
]
requires-python = ">=3.8"
dependencies = []
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "coverage>=6.0.0",
]

[tool.setuptools]
packages = ["hsm"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v --cov=hsm --cov-report=term-missing --cov-report=xml:coverage-reports/coverage.xml"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["hsm"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 80
