# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsm"
version = "0.1.0"
description = "A hierarchical finite state machine library"
authors = [
    {name = "Brad Edwards", email = "brad@keplerops.com"},
]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "coverage>=6.0.0",
]
dev = [
    "black>=24.1.0",
    "bandit>=1.7.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hsm*"]
exclude = ["tests*"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
^/tests/fixtures
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v --cov=hsm --cov-report=term-missing --cov-report=xml:coverage-reports/coverage.xml"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["hsm"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests", "tests/unit", "tests/integration"]
skips = ["B101"]  # Skip assert warnings globally
targets = ["hsm"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["tests/fixtures"]
